# ai-notepad

./: LICENSE  README.md  SETUP.md  start-services-https.bat  start-services-mixed.bat  start-services.bat  start-services.ps1
backend/: main.py  models.py  pyproject.toml  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: NoteEditor.tsx  NoteList.tsx  TagFilter.tsx  VoiceRecorder.tsx
transcription-service/: README.md  install-ffmpeg.bat  install-ffmpeg.ps1  main.py  pyproject.toml
