[tool.poetry]
name = "notepad-backend"
version = "0.1.0"
description = "Backend service for the notepad application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
python-dateutil = "^2.8.2"
transformers = "^4.39.3"
torch = {version = "^2.2.2", source = "pytorch"}
accelerate = "^0.28.0"
python-dotenv = "^1.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 