[tool.poetry]
name = "transcription-service"
version = "0.1.0"
description = "Voice transcription service for the notepad application"
authors = ["slebden@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
torch = {version = "^2.2.2", source = "pytorch"}
openai-whisper = "^20250625"
python-multipart = "^0.0.20"
ffmpeg-python = "^0.2.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 